# daemon-node

./: .gitignore  .gitleaks.toml  .stream-plan.md  AGENTS.md  AUTH_PLAN.md  Cargo.toml  HARDENING-PLAN-allow-permanent.md  HARDENING-PLAN-artifact-pinning.md  HARDENING-PLAN-authz-f3f4.md  HARDENING-PLAN-capability-tokens.md  HARDENING-PLAN-checkurl-identity.md  HARDENING-PLAN-child-env-policy.md  HARDENING-PLAN-clippy-disallow.md  HARDENING-PLAN-conformance-coverage.md  HARDENING-PLAN-contained-root.md  HARDENING-PLAN-env-ban-migration.md  HARDENING-PLAN-exec-approval-fingerprint.md  HARDENING-PLAN-fs-symlink-interim.md  HARDENING-PLAN-ingress-governor.md  HARDENING-PLAN-policy-partition.md  HARDENING-PLAN.md  LICENSE-MIT  NOTICE  README.md  REUSE.toml  clippy.toml  deny.toml  flake.nix  typos.toml
bindings/daemon-core-ffi/: Cargo.toml  cbindgen.toml
bindings/daemon-core-ffi/harness/: harness.c  run.sh
bindings/daemon-core-ffi/include/: daemon_core.h
bindings/daemon-core-ffi/src/: lib.rs
bindings/daemon-ffi/: Cargo.toml  cbindgen.toml
bindings/daemon-ffi/harness/: harness.c  run.sh
bindings/daemon-ffi/include/: daemon.h
bindings/daemon-ffi/src/: lib.rs
bins/daemon/: Cargo.toml
bins/daemon-cli/: Cargo.toml
bins/daemon-cli/src/: cli.rs  main.rs
bins/daemon-cli/src/cmd/: contact.rs  conv.rs  cron.rs  curator.rs  directory.rs  member.rs  mod.rs  model.rs  orchestration.rs  session.rs
bins/daemon-cli/src/render/: cron.rs  curator.rs  general.rs  messaging.rs  misc.rs  mod.rs  model.rs  orchestration.rs  profile.rs  session.rs
bins/daemon/src/: config.rs  gateway_backend.rs  main.rs  managed_backends.rs
bins/daemon/tests/: host_launch.rs  placement.rs  trace.rs
bins/swarm-local/: Cargo.toml
bins/swarm-local/examples/: local-demo.toml
bins/swarm-local/src/: main.rs
crates/adapters/daemon-acp/: Cargo.toml
crates/adapters/daemon-acp/src/: lib.rs
crates/adapters/daemon-delivery/: Cargo.toml
crates/adapters/daemon-delivery/src/: lib.rs
crates/adapters/daemon-delivery/tests/: delivery.rs
crates/adapters/daemon-demo/: Cargo.toml
crates/adapters/daemon-demo/src/: adapter.rs  auth.rs  config.rs  lib.rs  seed.rs
guests/: .gitignore  Cargo.toml  README.md  guests.blake3
guests/test-abi-basic/: Cargo.toml
guests/test-abi-basic/src/: lib.rs
guests/tiny-llama/: Cargo.toml
guests/tiny-llama/src/: lib.rs
tests/daemon-conformance/: Cargo.toml
tests/daemon-conformance/src/: acceptance.rs  approval.rs  background_spawn.rs  credentials.rs  harness.rs  journal.rs  lib.rs  orchestration.rs  store_backends.rs  supervision.rs  tool_provider.rs  translation.rs  web_tools.rs
tests/daemon-conformance/src/node/: access_control.rs  account_management.rs  auth_transport.rs  bootstrap_wiring.rs  cron.rs  daemon_cloud_e2e.rs  delivery_memory.rs  demo_transport.rs  detached_delegation.rs  events_transport.rs  f3f4_ownership.rs  feedback.rs  fs_content.rs  harness.rs  history.rs  http_ownership.rs  ingest.rs  ingress_governor.rs  live_agent_e2e.rs  messaging.rs  mod.rs  negative_auth.rs  operator_steer.rs  ownership.rs  ownership_matrix.rs  ownership_transport.rs  positive_e2e.rs  presence.rs  process_notify.rs  profiles_skills.rs  provider_discovery.rs  routing_auth.rs  (+14 more)
tests/daemon-conformance/tests/: acp_engine_profile.rs  adapter_policy.rs  agent_authored_profile.rs  agent_profile_provenance_caps.rs  approval_deny_reason.rs  approval_detail.rs  chat_journal.rs  disconnect_reason.rs  fingerprint_manage.rs  fingerprint_provenance.rs  foreign_agent.rs  foreign_agent_discovery_e2e.rs  foreign_delegation.rs  foreign_engine_profile.rs  foreign_midturn_death.rs  foreign_protocols.rs  foreign_streamjson_profile.rs  inline_subagent.rs  membership_push.rs  notice_provenance.rs  orchestrate_guardrails.rs  persona_ops.rs  provider_sign_in.rs  tool_inventory.rs  tool_override.rs  transport_lifecycle.rs  transport_presence.rs  tree_enrichment.rs
tests/daemon-stub-engine/: Cargo.toml
tests/daemon-stub-engine/src/: lib.rs
tests/daemon-swarm-e2e/: Cargo.toml
tests/daemon-swarm-e2e/src/: lib.rs
tests/daemon-swarm-e2e/tests/: drills.rs  fleet_live_hetero.rs  live_transport.rs  swarm_e2e.rs  wasm_profiles.rs  ws_live_workers.rs
tools/daemon-tool-browser/: Cargo.toml
tools/daemon-tool-browser/docs/: screencast-in-app.md
tools/daemon-tool-browser/src/: error.rs  lib.rs  supervisor.rs  tool.rs
tools/daemon-tool-browser/tests/: browser.rs
tools/daemon-tool-cron/: Cargo.toml
tools/daemon-tool-cron/src/: lib.rs
tools/daemon-tool-execute-code/: Cargo.toml
tools/daemon-tool-execute-code/src/: exec.rs  lib.rs  python.rs  sandbox.rs
tools/daemon-tool-execute-code/tests/: execute_code.rs
tools/daemon-tool-fs/: Cargo.toml
tools/daemon-tool-fs/src/: extract.rs  fuzzy.rs  lib.rs  lint.rs  read.rs  search.rs
tools/daemon-tool-fs/tests/: fuzzy_corpus.rs
tools/daemon-tool-metta/: Cargo.toml
tools/daemon-tool-metta/src/: lib.rs
tools/daemon-tool-orchestrate/: Cargo.toml
tools/daemon-tool-orchestrate/src/: lib.rs
tools/daemon-tool-orchestrate/tests/: orchestrate.rs
tools/daemon-tool-process/: Cargo.toml
tools/daemon-tool-process/src/: lib.rs
tools/daemon-tool-profile/: Cargo.toml
tools/daemon-tool-profile/src/: lib.rs  tests.rs
tools/daemon-tool-semantic-search/: Cargo.toml
tools/daemon-tool-semantic-search/src/: lib.rs
tools/daemon-tool-semantic-search/tests/: semantic_search.rs
tools/daemon-tool-session-search/: Cargo.toml
tools/daemon-tool-session-search/src/: lib.rs
tools/daemon-tool-session-search/tests/: session_search.rs
tools/daemon-tool-shell/: Cargo.toml
tools/daemon-tool-shell/src/: lib.rs
tools/daemon-tool-todo/: Cargo.toml
tools/daemon-tool-todo/src/: lib.rs
tools/daemon-tool-todo/tests/: todo.rs
tools/daemon-tool-user-profile/: Cargo.toml
tools/daemon-tool-user-profile/src/: lib.rs
tools/daemon-tool-vision/: Cargo.toml
tools/daemon-tool-vision/src/: error.rs  input.rs  lib.rs  mime.rs
tools/daemon-tool-vision/tests/: vision.rs
xtask/: Cargo.toml
xtask/src/: main.rs  tokenize.rs  verify_codec.c
(+932 files in other folders)
