[workspace]
resolver = "2"
members = ["crates/*/*", "tools/*", "bindings/*", "bins/*", "tests/*", "xtask"]

[workspace.package]
version = "0.0.1"
edition = "2021"
# matrix-sdk 0.18 (the `daemon-matrix` adapter) sets the workspace MSRV floor at 1.93; the flake's
# fenix `stable` toolchain (1.96 at lock time) satisfies it. All matrix types stay inside that crate.
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/daemon-ai/daemon-node"

# Single source of truth for lint policy. Member crates opt in with `[lints]\nworkspace = true`.
# Levels are inherited by every member; the `just lint` recipe escalates warnings to errors
# (`cargo clippy ... -- -D warnings`), so these are the de-facto gate. Keep additions conservative
# to avoid a large churn pass; tighten over time. Crate-local `#[allow(...)]` still override.
[workspace.lints.rust]
# Dead/unused code is the primary "leftover / unfinished" signal (often AI-agent residue).
# `unused` is a lint group, so it takes a lower priority than any specific lint that overrides it.
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# High-signal, low-false-positive checks for common leftovers; default clippy groups also run.
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"

[workspace.dependencies]
# shared third-party deps (single source of truth)
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
ciborium = "0.2"
# property-based CDDL conformance: `arbitrary` derives (feature-gated, never shipped) generate values
# across every wire variant; `proptest` (dev) drives them; serialized output is validated against
# daemon-api.cddl so "Rust output always matches the schema" is a test, not a hope.
arbitrary = { version = "1", features = ["derive"] }
proptest = "1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
futures = "0.3"
strsim = "0.11"
# SASL state machine for the node authentication handshake (SCRAM-SHA-256 / PLAIN / EXTERNAL). v2+
# is dual Apache-2.0/MIT. default-features off drops gssapi (native libgssapi) + the SSO mechanisms;
# we enable only what the node serves. Isolated to `daemon-host` (the transport crate).
rsasl = { version = "2.3.1", default-features = false, features = [
    "provider",       # raw-bytes Session::step (the L0 mux envelope already carries opaque bytes)
    "config_builder", # SASLConfig::builder()
    "scram-sha-2",    # SCRAM-SHA-256
    "plain",          # PLAIN (verified against Argon2id; TLS-only by policy)
    "external",       # EXTERNAL (mTLS client-cert -> user)
] }
# TLS for the TCP api transport. Re-exports the tree's already-resolved rustls 0.23 (verified via
# `cargo tree -i rustls`); default features keep the aws-lc-rs crypto provider the rest of the tree
# already uses (no second backend). Isolated to `daemon-host`.
tokio-rustls = "0.26"
# Schema migrations for the rusqlite-backed stores, gated by `PRAGMA user_version` (no bookkeeping
# table). Pinned to the release that targets rusqlite 0.37 — 2.4+ require newer rusqlite (2.4->0.38,
# 2.5->0.39, 2.6->0.40), so bump this in lockstep only when the workspace rusqlite pin moves.
rusqlite_migration = "=2.3.0"
# real networked providers (isolated to the `daemon-providers` crate): genai gives one native-protocol
# client over OpenAI/Anthropic/Gemini/… so we don't hand-roll wire/SSE/JSON. Default TLS is rustls.
genai = "0.6"
# still used by the in-process mock HTTP server in the provider wire tests.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
# the official Rust MCP SDK: the `daemon-mcp-client` adapter speaks MCP to external tool servers
# (stdio child-process + streamable-HTTP). default-features off drops the server/macros defaults; we
# enable only the client + the two client transports. Isolated to that one adapter crate so rmcp's
# runtime never leaks into host/core (mirrors the genai/axum isolation).
rmcp = { version = "1.7", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
# the Matrix client SDK: the `daemon-matrix` adapter speaks Matrix (sync, send, E2EE) to homeservers
# and drives our engine as a `NodeApi` client (the inverse of `daemon-acp`). `e2e-encryption` +
# `sqlite`/`bundled-sqlite` give a per-account on-disk crypto+state store with no system libsqlite3
# (matching `daemon-store`); `sso-login` backs the operator `matrix login` flow; the `testing` feature
# (dev) provides the wiremock-based `MatrixMockServer`. Default features carry the rustls HTTP client.
# All matrix-sdk/ruma types stay confined to that one adapter crate so they never leak into host/core
# (mirrors genai/axum/rmcp). Inbound uses the native `Client::sync` + event-handler path (robust and
# mock-testable) rather than `matrix-sdk-ui`'s sliding-sync `SyncService` (which needs MSC4186).
matrix-sdk = { version = "0.18", features = ["e2e-encryption", "sqlite", "bundled-sqlite", "sso-login"] }
# readability/HTML->markdown extraction for the key-less `web_extract` fallback (Mozilla readability
# port). Isolated to the `daemon-tool-web` crate; no network I/O of its own.
dom_smoothie = "0.18"
# headless-browser control over the Chrome DevTools Protocol for the `browser` tool. tokio-native;
# isolated to the `daemon-tool-browser` crate behind the `browser` feature (slow first compile: the
# CDP bindings are ~60K generated LOC), so the default workspace build never pays for it.
chromiumoxide = { version = "0.9", default-features = false }
# local inference engines (feature-gated, isolated to the `daemon-infer` worker crate; never built
# in the default workspace gate). llama-cpp-4 tracks upstream llama.cpp closely (a llama-cpp-2 fork);
# default-features off drops its `mtmd`/`dynamic-link` defaults — we add `openmp` + a backend.
llama-cpp-4 = { version = "0.3", default-features = false, features = ["openmp"] }
encoding_rs = "0.8"
# mistral.rs: the async, high-level local engine (Phase-1 seam; depth in Phase 2). default-features
# off keeps the resolved tree minimal; hardware backends are opt-in via the worker's features.
mistralrs = { version = "0.8", default-features = false }
# in-process mock HTTP server for provider wire tests (no live network in the suite).
wiremock = "0.6"
# (dev) raw signal delivery for the graceful-shutdown launch gate: SIGTERM/SIGINT sent to the real
# spawned binary exactly the way a container runtime stops it. Already resolved in the tree
# (transitively); test-only, never compiled into a shipped artifact.
nix = { version = "0.31", default-features = false, features = ["signal"] }
# Hugging Face Hub client for model acquisition into the shared cache (async tokio API + rustls).
# Same crate (and cache layout) mistral.rs uses, so a warmed cache is read by the mistralrs engine.
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "rustls-tls"] }
# content hashing for stable model-catalog ids and LCM sensitive-redaction / externalization digests.
sha2 = "0.10"
# LCM ingest-protection + message/session filters: sensitive-pattern catalog, base64/data-URI guard,
# externalized-payload reference parsing, and message/session glob compilation.
regex = "1"
# LCM externalization: base64 decode of stored payload bodies on read-back.
base64 = "0.22"
# system memory probe for the hardware-aware quant recommender (RAM budget; VRAM is best-effort via
# nvidia-smi, no GPU SDK link). default-features off keeps it to the system-info we use.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
# pure-Rust GGUF reader for metadata introspection (arch / context / ftype) without loading a model.
gguf-rs = "0.1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
# layered configuration (the node's launch/composition config): defaults <- TOML file <- env <- CLI,
# merged and deserialized once into `NodeConfig`. The `env` provider maps `DAEMON_FOO__BAR` -> the
# `foo.bar` serde path (mechanical, no hand-maintained name list). Isolated to the `daemon` binary.
figment = { version = "0.10", features = ["toml", "env"] }
# I15 cron backing: croner parses/evaluates full cron expressions (incl. L/W/# extensions) and is
# timezone-aware via chrono/chrono-tz. Pure Rust (no native deps), isolated to `daemon-schedule`.
# `chrono` is already in the tree (transitive); `chrono-tz` adds the IANA database for per-job tz.
croner = "3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10"
# SKILL.md frontmatter parsing (the skills subsystem): a delimited YAML block at the top of each
# bundle. Isolated to `daemon-skills`; `serde_yaml` is a small pure-Rust parser over `unsafe-libyaml`.
serde_yaml = "0.9"
# optional in-process HTTP/WS surface (the daemon-http adapter): JSON dispatch + SSE/WS over the
# merged session event log. Isolated to the `daemon-http` adapter crate so axum never leaks into the
# host/core; toggled on like MCP at launch.
axum = { version = "0.8", features = ["ws"] }
# WebSocket carrier for the CBOR wire mux (`daemon-host` ws.rs, the browser/WASM client path).
# Already resolved in the tree via axum's ws feature (same 0.29), so this adds no new crates. No
# TLS features on purpose: `wss://` terminates at a reverse proxy for now.
tokio-tungstenite = "0.29"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# OpenTelemetry OTLP trace export (feature-gated `otel` in daemon-telemetry; never in the default
# workspace gate). Traces only; exported over OTLP/HTTP+protobuf via the tree's existing rustls
# reqwest (no gRPC/tonic). `tracing-opentelemetry` 0.33 pins `opentelemetry` 0.32 — bump in lockstep.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-proto", "reqwest-client", "reqwest-rustls"] }
tracing-opentelemetry = "0.33"
# read-mostly immutable snapshot publishing (routing/model catalog handles)
arc-swap = "1"
# verifiable-trace stack (Blockchain Commons): dcbor for deterministic CBOR,
# bc-envelope for the Gordian Envelope digest tree + signing, bc-components for keys.
# We only ever use ed25519 signing (daemon-credentials capability leases + daemon-telemetry journal
# segments), never SSH keys or post-quantum KEM/DSA. So we drop the default `ssh` and `pqcrypto`
# features: `ssh` pulls `ssh-key` -> `rsa` (RUSTSEC-2023-0071 Marvin timing attack) and `bc-components/ssh`;
# `pqcrypto` pulls the archived/unmaintained `pqcrypto-mlkem/mldsa/traits/internals`
# (RUSTSEC-2026-0161/0162/0163/0166). Trimming them removes all five from the tree entirely. The
# remaining features are bc-envelope's defaults minus those two. Keep this list in sync if a new
# default feature is added upstream.
dcbor = "0.25"
bc-envelope = { version = "0.43", default-features = false, features = [
    "attachment",
    "compress",
    "edge",
    "ed25519",
    "encrypt",
    "expression",
    "known_value",
    "known-values-directory-loading",
    "proof",
    "recipient",
    "salt",
    "secp256k1",
    "secret",
    "signature",
    "sskr",
    "types",
] }
bc-components = { version = "0.31", default-features = false, features = ["secp256k1", "ed25519"] }
bc-rand = "0.5"
# Agent Client Protocol (ACP): JSON-RPC 2.0 over stdio for foreign agents. Pinned; isolated to the
# `daemon-acp` adapter crate so its runtime model never leaks into `daemon-host`.
agent-client-protocol = "=0.15.0"
# hyperon (MeTTa): the symbolic-coprocessor engine. NOT a published crate — pinned by rev so the
# Cargo.lock git source matches the Nix `fetchFromGitHub` hash (flake.nix vendoring, Option A).
# default-features off drops `das` (a second git dependency, `metta-bus-client`) and the `git`
# feature (`git2`/vendored-libgit2 — a native C build). We DO opt into `pkg_mgmt` because this rev's
# `builtin_mods/json.rs` references `serde_json` unconditionally, so it fails to compile without it;
# `pkg_mgmt` pulls only crates.io deps (serde/serde_json/semver/xxhash) — no native libs, no extra
# git source. Feature-gated + isolated to the `daemon-metta` worker crate, never built in the default
# workspace gate (mirrors the `daemon-infer` engine lanes).
hyperon = { git = "https://github.com/trueagi-io/hyperon-experimental.git", rev = "3f76dc460da6961f57f69f6c3e550c59c74ada83", default-features = false, features = ["pkg_mgmt"] }

# internal crates (path deps; referenced by member crates via `workspace = true`)
daemon-common = { path = "crates/contracts/daemon-common" }
daemon-protocol = { path = "crates/contracts/daemon-protocol" }
daemon-supervision = { path = "crates/contracts/daemon-supervision" }
daemon-api = { path = "crates/contracts/daemon-api" }
daemon-core = { path = "crates/engine/daemon-core" }
daemon-context-lcm = { path = "crates/engine/daemon-context-lcm" }
daemon-mnemosyne = { path = "crates/memory/daemon-mnemosyne" }
daemon-providers = { path = "crates/providers/daemon-providers" }
# default-features = false here so workspace consumers inherit the light (no-engine) build; a worker
# build opts into an engine via `--features llama` / `--features mistralrs` on the crate directly.
daemon-infer = { path = "crates/providers/daemon-infer", default-features = false }
daemon-models = { path = "crates/providers/daemon-models" }
daemon-auth = { path = "crates/substrate/daemon-auth" }
daemon-store = { path = "crates/substrate/daemon-store" }
daemon-schedule = { path = "crates/substrate/daemon-schedule" }
daemon-activation = { path = "crates/substrate/daemon-activation" }
daemon-provision = { path = "crates/substrate/daemon-provision" }
daemon-credentials = { path = "crates/substrate/daemon-credentials" }
daemon-telemetry = { path = "crates/substrate/daemon-telemetry" }
daemon-host = { path = "crates/substrate/daemon-host" }
daemon-acp = { path = "crates/adapters/daemon-acp" }
daemon-http = { path = "crates/adapters/daemon-http" }
daemon-mcp-client = { path = "crates/adapters/daemon-mcp-client" }
daemon-delivery = { path = "crates/adapters/daemon-delivery" }
daemon-ingest = { path = "crates/adapters/daemon-ingest" }
daemon-matrix = { path = "crates/adapters/daemon-matrix" }
daemon-rooms = { path = "crates/adapters/daemon-rooms" }
daemon-transport = { path = "crates/substrate/daemon-transport" }
daemon-orchestration = { path = "crates/orchestration/daemon-orchestration" }
daemon-node = { path = "crates/node/daemon-node" }
# default-features = false here so workspace consumers (the client + tool) inherit the light
# (no-hyperon) build; the worker build opts into the engine via `--features hyperon` on the crate.
daemon-metta = { path = "crates/coprocessor/daemon-metta", default-features = false }
daemon-metta-client = { path = "crates/coprocessor/daemon-metta-client" }
daemon-pytool = { path = "crates/coprocessor/daemon-pytool" }
daemon-pytool-client = { path = "crates/coprocessor/daemon-pytool-client" }
daemon-tool-metta = { path = "tools/daemon-tool-metta" }
daemon-tool-shell = { path = "tools/daemon-tool-shell" }
daemon-tool-fs = { path = "tools/daemon-tool-fs" }
daemon-tool-tkx = { path = "tools/daemon-tool-tkx" }
daemon-tool-orchestrate = { path = "tools/daemon-tool-orchestrate" }
daemon-tool-cron = { path = "tools/daemon-tool-cron" }
daemon-tool-web = { path = "tools/daemon-tool-web" }
daemon-tool-browser = { path = "tools/daemon-tool-browser" }
daemon-tool-todo = { path = "tools/daemon-tool-todo" }
daemon-tool-clarify = { path = "tools/daemon-tool-clarify" }
daemon-skills = { path = "crates/skills/daemon-skills" }
daemon-tool-skill = { path = "tools/daemon-tool-skill" }

[profile.release]
panic = "unwind"   # catch_unwind supervision is void under abort (see docs/research/beam-substrate-reference-extraction.md §2.2)

[profile.dev]
panic = "unwind"
