[workspace]
resolver = "2"
members = ["crates/*/*", "tools/*", "bindings/*", "bins/*", "tests/*", "xtask"]

[workspace.package]
version = "0.0.1"
edition = "2021"
# matrix-sdk 0.18 (the `daemon-matrix` adapter) sets the workspace MSRV floor at 1.93; the flake's
# fenix `stable` toolchain (1.96 at lock time) satisfies it. All matrix types stay inside that crate.
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/daemon-ai/daemon-node"

# Single source of truth for lint policy. Member crates opt in with `[lints]\nworkspace = true`.
# Levels are inherited by every member; the `just lint` recipe escalates warnings to errors
# (`cargo clippy ... -- -D warnings`), so these are the de-facto gate. Keep additions conservative
# to avoid a large churn pass; tighten over time. Crate-local `#[allow(...)]` still override.
[workspace.lints.rust]
# Dead/unused code is the primary "leftover / unfinished" signal (often AI-agent residue).
# `unused` is a lint group, so it takes a lower priority than any specific lint that overrides it.
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# High-signal, low-false-positive checks for common leftovers; default clippy groups also run.
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
# Phase 4 hardening guardrails (config in clippy.toml): raw fs outside ContainedRoot, raw reqwest
# clients outside daemon-egress, undeclared process spawns. `just lint`'s `-D warnings` makes these
# hard errors. `disallowed_types` carries the reqwest ban decoupled from the fs `disallowed_methods`
# allows, so an fs `#[allow]` can never silently re-open the egress hole.
disallowed_methods = "warn"
disallowed_types = "warn"

[workspace.dependencies]
# shared third-party deps (single source of truth)
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
ciborium = "0.2"
# property-based CDDL conformance: `arbitrary` derives (feature-gated, never shipped) generate values
# across every wire variant; `proptest` (dev) drives them; serialized output is validated against
# daemon-api.cddl so "Rust output always matches the schema" is a test, not a hope.
arbitrary = { version = "1", features = ["derive"] }
proptest = "1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
futures = "0.3"
strsim = "0.11"
# UTS#46 IDNA/punycode host normalization for the `check_url` SSRF gate (safety/url.rs): fold a
# unicode/punycode host to the canonical ASCII form the resolver uses, so an alternate-separator /
# fullwidth-digit host cannot slip an IP-literal or `localhost` past the denylist. Already resolved
# in-tree transitively (reqwest -> url -> idna), so this adds no new crate/license (deny stays green).
idna = "1"
# SASL state machine for the node authentication handshake (SCRAM-SHA-256 / PLAIN / EXTERNAL). v2+
# is dual Apache-2.0/MIT. default-features off drops gssapi (native libgssapi) + the SSO mechanisms;
# we enable only what the node serves. Isolated to `daemon-host` (the transport crate).
rsasl = { version = "2.3.1", default-features = false, features = [
    "provider",       # raw-bytes Session::step (the L0 mux envelope already carries opaque bytes)
    "config_builder", # SASLConfig::builder()
    "scram-sha-2",    # SCRAM-SHA-256
    "plain",          # PLAIN (verified against Argon2id; TLS-only by policy)
    "external",       # EXTERNAL (mTLS client-cert -> user)
] }
# TLS for the TCP api transport. Re-exports the tree's already-resolved rustls 0.23 (verified via
# `cargo tree -i rustls`); default features keep the aws-lc-rs crypto provider the rest of the tree
# already uses (no second backend). Isolated to `daemon-host`.
tokio-rustls = "0.26"
# Schema migrations for the rusqlite-backed stores, gated by `PRAGMA user_version` (no bookkeeping
# table). Pinned to the release that targets rusqlite 0.37 — 2.4+ require newer rusqlite (2.4->0.38,
# 2.5->0.39, 2.6->0.40), so bump this in lockstep only when the workspace rusqlite pin moves.
rusqlite_migration = "=2.3.0"
# real networked providers (isolated to the `daemon-providers` crate): genai gives one native-protocol
# client over OpenAI/Anthropic/Gemini/… so we don't hand-roll wire/SSE/JSON. Default TLS is rustls.
genai = "0.6"
# still used by the in-process mock HTTP server in the provider wire tests.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
# URL construction/parsing for the OAuth2 PKCE auth-flow factory (`daemon-oauth`): authorization-URL
# query building + callback query parsing (`form_urlencoded`). Already in-tree transitively via
# reqwest; declared directly so the factory does not depend on reqwest's re-export.
url = "2"
# the official Rust MCP SDK: the `daemon-mcp-client` adapter speaks MCP to external tool servers
# (stdio child-process + streamable-HTTP). default-features off drops the server/macros defaults; we
# enable only the client + the two client transports. Isolated to that one adapter crate so rmcp's
# runtime never leaks into host/core (mirrors the genai/axum isolation).
rmcp = { version = "1.7", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
# the Matrix client SDK: the `daemon-matrix` adapter speaks Matrix (sync, send, E2EE) to homeservers
# and drives our engine as a `NodeApi` client (the inverse of `daemon-acp`). `e2e-encryption` +
# `sqlite`/`bundled-sqlite` give a per-account on-disk crypto+state store with no system libsqlite3
# (matching `daemon-store`); `sso-login` backs the operator `matrix login` flow; the `testing` feature
# (dev) provides the wiremock-based `MatrixMockServer`. Default features carry the rustls HTTP client.
# All matrix-sdk/ruma types stay confined to that one adapter crate so they never leak into host/core
# (mirrors genai/axum/rmcp). Inbound uses the native `Client::sync` + event-handler path (robust and
# mock-testable) rather than `matrix-sdk-ui`'s sliding-sync `SyncService` (which needs MSC4186).
matrix-sdk = { version = "0.18", features = ["e2e-encryption", "sqlite", "bundled-sqlite", "sso-login"] }
# readability/HTML->markdown extraction for the key-less `web_extract` fallback (Mozilla readability
# port). Isolated to the `daemon-tool-web` crate; no network I/O of its own.
dom_smoothie = "0.18"
# fs-tool search stack (isolated to `daemon-tool-fs`): gitignore-respecting workspace walking
# (`ignore` + its `globset`) and native line searching with context (`grep-searcher`/`grep-regex`)
# — the same pure-Rust crates ripgrep is built from, so the `fs` grep/glob ops need no rg binary.
ignore = "0.4"
globset = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
# text diffing/similarity for the fs tool's fuzzy edit (ratio scoring for the block-anchor /
# context-aware strategies, hermes `fuzzy_match.py` parity) and its unified-diff edit results.
similar = "2"
# document auto-extraction on `fs` read (feature `extract`, isolated to `daemon-tool-fs`):
# PDF text via pdf-extract (+ lopdf), DOCX/XLSX via zip + quick-xml (a direct port of hermes'
# stdlib zipfile+ElementTree extraction; calamine was evaluated and rejected because its latest
# release pins quick-xml 0.39, which carries RUSTSEC-2026-0194/0195) — all pure Rust, no
# C/system deps. `zip` is default-features = false: reading OOXML needs only `deflate`; the
# default aes/bzip2/zstd/xz stack would drag in far heavier transitive trees. quick-xml >= 0.41
# is load-bearing: it fixes the two RUSTSEC DoS advisories above.
pdf-extract = "0.12"
zip = { version = "7", default-features = false, features = ["deflate"] }
quick-xml = "0.41"
# headless-browser control over the Chrome DevTools Protocol for the `browser` tool. tokio-native;
# isolated to the `daemon-tool-browser` crate behind the `browser` feature (slow first compile: the
# CDP bindings are ~60K generated LOC), so the default workspace build never pays for it.
chromiumoxide = { version = "0.9", default-features = false }
# local inference engines (feature-gated, isolated to the `daemon-infer` worker crate; never built
# in the default workspace gate). llama-cpp-4 tracks upstream llama.cpp closely (a llama-cpp-2 fork);
# default-features off drops its `mtmd`/`dynamic-link` defaults — we add `openmp` + a backend.
# Multimodal projector loading is opt-in again via daemon-infer's `mtmd` feature (forwards to
# `llama-cpp-4/mtmd`), enabled in the shipped `daemon-infer-llama` nix lane (from-source cmake
# builds tools/mtmd) but NOT in dev-shell `dynamic-link` builds (the prebuilt has no libmtmd).
llama-cpp-4 = { version = "0.3", default-features = false, features = ["openmp"] }
encoding_rs = "0.8"
# mistral.rs: the async, high-level local engine (Phase-1 seam; depth in Phase 2). default-features
# off keeps the resolved tree minimal; hardware backends are opt-in via the worker's features.
mistralrs = { version = "0.8", default-features = false }
# in-process mock HTTP server for provider wire tests (no live network in the suite).
wiremock = "0.6"
# Raw signal delivery: `daemon-processes` SIGTERMs whole background process groups (`killpg`), and
# the graceful-shutdown launch gate (dev) sends SIGTERM/SIGINT to the real spawned binary exactly
# the way a container runtime stops it.
nix = { version = "0.31", default-features = false, features = ["signal"] }
# Unix syscall wrappers for the Phase 3 `ContainedRoot` capability (Cluster C): `openat2`
# (RESOLVE_BENEATH | RESOLVE_NO_SYMLINKS | NO_MAGICLINKS) on Linux plus the `openat`/`fstatat`/
# `mkdirat`/`unlinkat`/`renameat` family for the cross-unix (macOS) fd-relative fallback. rustix's
# public API is SAFE (it wraps the raw syscalls), so `daemon-core`'s `#![forbid(unsafe_code)]` is
# preserved. Already resolved in-tree transitively (rustix 1.1.4), so promoting it to a direct dep of
# `daemon-core` adds zero crates to the graph. Unix-only — the non-unix build falls back to the
# lexical `contain()` + `symlink_metadata` stub and never links rustix.
rustix = { version = "1", default-features = false, features = ["std", "fs"] }
# Low-level syscall constants/wrappers for the `daemon-sandbox` Linux exec sandbox: `prctl`
# (NO_NEW_PRIVS), `AF_INET`/`AF_INET6`, and `SYS_socket` for the seccomp filter. Consumed only by
# `daemon-sandbox` under `[target.'cfg(target_os="linux")']` (else pulled transitively by rustix/nix).
libc = "0.2"
# Kernel-enforced exec sandbox (Cluster B/C) for the `execute_code` plain fallback, isolated to the
# `daemon-sandbox` crate under `[target.'cfg(target_os="linux")']`: Landlock scopes the child's
# filesystem, seccomp denies INET/INET6 sockets — the case bwrap can't cover (userns unavailable).
# landlock: MIT OR Apache-2.0; seccompiler: Apache-2.0 OR BSD-3-Clause (both permissive, deny-clean).
landlock = "0.4.5"
seccompiler = "0.5.0"
# Cross-platform pseudo-terminal (wezterm's pty layer) for interactive background CLIs
# (`shell(pty=true)` → `daemon-processes`). MIT; pins some older transitives (bitflags 1, nix 0.28)
# — duplicate-version warnings only (deny.toml multiple-versions = "warn").
portable-pty = "0.9"
# Concurrent wait+kill on one std child (the piped background backend: reader thread waits, the
# kill path signals). Isolated to `daemon-processes`.
shared_child = "1"
# Hugging Face Hub client for model acquisition into the shared cache (async tokio API + rustls).
# Same crate (and cache layout) mistral.rs uses, so a warmed cache is read by the mistralrs engine.
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "rustls-tls"] }
# content hashing for stable model-catalog ids and LCM sensitive-redaction / externalization digests.
sha2 = "0.10"
# LCM ingest-protection + message/session filters: sensitive-pattern catalog, base64/data-URI guard,
# externalized-payload reference parsing, and message/session glob compilation.
regex = "1"
# LCM externalization: base64 decode of stored payload bodies on read-back.
base64 = "0.22"
# system memory probe for the hardware-aware quant recommender (RAM budget; VRAM is best-effort via
# nvidia-smi, no GPU SDK link). default-features off keeps it to the system-info we use.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
# pure-Rust GGUF reader for metadata introspection (arch / context / ftype) without loading a model.
gguf-rs = "0.1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
# layered configuration (the node's launch/composition config): defaults <- TOML file <- env <- CLI,
# merged and deserialized once into `NodeConfig`. The `env` provider maps `DAEMON_FOO__BAR` -> the
# `foo.bar` serde path (mechanical, no hand-maintained name list). Isolated to the `daemon` binary.
figment = { version = "0.10", features = ["toml", "env"] }
# I15 cron backing: croner parses/evaluates full cron expressions (incl. L/W/# extensions) and is
# timezone-aware via chrono/chrono-tz. Pure Rust (no native deps), isolated to `daemon-schedule`.
# `chrono` is already in the tree (transitive); `chrono-tz` adds the IANA database for per-job tz.
croner = "3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10"
# SKILL.md frontmatter parsing (the skills subsystem): a delimited YAML block at the top of each
# bundle. Isolated to `daemon-skills`; `serde_yaml` is a small pure-Rust parser over `unsafe-libyaml`.
serde_yaml = "0.9"
# optional in-process HTTP/WS surface (the daemon-http adapter): JSON dispatch + SSE/WS over the
# merged session event log. Isolated to the `daemon-http` adapter crate so axum never leaks into the
# host/core; toggled on like MCP at launch.
axum = { version = "0.8", features = ["ws"] }
# WebSocket carrier for the CBOR wire mux (`daemon-host` ws.rs, the browser/WASM client path).
# Already resolved in the tree via axum's ws feature (same 0.29), so this adds no new crates. No
# TLS features on purpose: `wss://` terminates at a reverse proxy for now.
tokio-tungstenite = "0.29"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# OpenTelemetry OTLP export (feature-gated `otel` in daemon-telemetry; never in the default
# workspace gate). Traces AND user-feedback log events, exported over OTLP/HTTP+protobuf via the
# tree's existing rustls reqwest (no gRPC/tonic). The `logs` signal (opentelemetry-otlp `logs`
# feature) backs `daemon-telemetry::feedback`; `opentelemetry` / `opentelemetry_sdk` carry the logs
# API in their default feature sets already. `tracing-opentelemetry` 0.33 pins `opentelemetry` 0.32
# — bump in lockstep.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "logs", "http-proto", "reqwest-client", "reqwest-rustls"] }
tracing-opentelemetry = "0.33"
# read-mostly immutable snapshot publishing (routing/model catalog handles)
arc-swap = "1"
# verifiable-trace stack (Blockchain Commons): dcbor for deterministic CBOR,
# bc-envelope for the Gordian Envelope digest tree + signing, bc-components for keys.
# We only ever use ed25519 signing (daemon-credentials capability leases + daemon-telemetry journal
# segments), never SSH keys or post-quantum KEM/DSA. So we drop the default `ssh` and `pqcrypto`
# features: `ssh` pulls `ssh-key` -> `rsa` (RUSTSEC-2023-0071 Marvin timing attack) and `bc-components/ssh`;
# `pqcrypto` pulls the archived/unmaintained `pqcrypto-mlkem/mldsa/traits/internals`
# (RUSTSEC-2026-0161/0162/0163/0166). Trimming them removes all five from the tree entirely. The
# remaining features are bc-envelope's defaults minus those two. Keep this list in sync if a new
# default feature is added upstream.
dcbor = "0.25"
bc-envelope = { version = "0.43", default-features = false, features = [
    "attachment",
    "compress",
    "edge",
    "ed25519",
    "encrypt",
    "expression",
    "known_value",
    "known-values-directory-loading",
    "proof",
    "recipient",
    "salt",
    "secp256k1",
    "secret",
    "signature",
    "sskr",
    "types",
] }
bc-components = { version = "0.31", default-features = false, features = ["secp256k1", "ed25519"] }
bc-rand = "0.5"
# Agent Client Protocol (ACP): JSON-RPC 2.0 over stdio for foreign agents. Pinned; isolated to the
# `daemon-acp` adapter crate so its runtime model never leaks into `daemon-host`.
agent-client-protocol = "=0.15.0"
# hyperon (MeTTa): the symbolic-coprocessor engine. NOT a published crate — pinned by rev so the
# Cargo.lock git source matches the Nix `fetchFromGitHub` hash (flake.nix vendoring, Option A).
# default-features off drops `das` (a second git dependency, `metta-bus-client`) and the `git`
# feature (`git2`/vendored-libgit2 — a native C build). We DO opt into `pkg_mgmt` because this rev's
# `builtin_mods/json.rs` references `serde_json` unconditionally, so it fails to compile without it;
# `pkg_mgmt` pulls only crates.io deps (serde/serde_json/semver/xxhash) — no native libs, no extra
# git source. Feature-gated + isolated to the `daemon-metta` worker crate, never built in the default
# workspace gate (mirrors the `daemon-infer` engine lanes).
hyperon = { git = "https://github.com/trueagi-io/hyperon-experimental.git", rev = "3f76dc460da6961f57f69f6c3e550c59c74ada83", default-features = false, features = ["pkg_mgmt"] }

# internal crates (path deps; referenced by member crates via `workspace = true`). Each carries a
# `version = "0"` requirement alongside the path: cargo-deny (`just deny`, bans check) treats a
# bare path dep as a wildcard and — since it cannot resolve a versionless workspace dependency —
# also reports it as an `unresolved-workspace-dependency`. A concrete requirement fixes both while
# still letting `wildcards = "deny"` catch a real registry `version = "*"`. `"0"` (`^0`, i.e. any
# 0.x) is used rather than the literal current version so a `just set-version` bump within 0.x does
# NOT need to touch every line here (the path always wins for the local build regardless).
daemon-common = { version = "0", path = "crates/contracts/daemon-common" }
daemon-protocol = { version = "0", path = "crates/contracts/daemon-protocol" }
daemon-supervision = { version = "0", path = "crates/contracts/daemon-supervision" }
daemon-api = { version = "0", path = "crates/contracts/daemon-api" }
daemon-core = { version = "0", path = "crates/engine/daemon-core" }
daemon-egress = { version = "0", path = "crates/engine/daemon-egress" }
daemon-context-lcm = { version = "0", path = "crates/engine/daemon-context-lcm" }
daemon-mnemosyne = { version = "0", path = "crates/memory/daemon-mnemosyne" }
daemon-providers = { version = "0", path = "crates/providers/daemon-providers" }
# default-features = false here so workspace consumers inherit the light (no-engine) build; a worker
# build opts into an engine via `--features llama` / `--features mistralrs` on the crate directly.
daemon-infer = { version = "0", path = "crates/providers/daemon-infer", default-features = false }
daemon-models = { version = "0", path = "crates/providers/daemon-models" }
daemon-auth = { version = "0", path = "crates/substrate/daemon-auth" }
daemon-store = { version = "0", path = "crates/substrate/daemon-store" }
daemon-workspace-index = { version = "0", path = "crates/substrate/daemon-workspace-index" }
daemon-processes = { version = "0", path = "crates/substrate/daemon-processes" }
daemon-sandbox = { version = "0", path = "crates/substrate/daemon-sandbox" }
daemon-schedule = { version = "0", path = "crates/substrate/daemon-schedule" }
daemon-activation = { version = "0", path = "crates/substrate/daemon-activation" }
daemon-provision = { version = "0", path = "crates/substrate/daemon-provision" }
daemon-credentials = { version = "0", path = "crates/substrate/daemon-credentials" }
daemon-telemetry = { version = "0", path = "crates/substrate/daemon-telemetry" }
daemon-host = { version = "0", path = "crates/substrate/daemon-host" }
daemon-acp = { version = "0", path = "crates/adapters/daemon-acp" }
daemon-gateway = { version = "0", path = "crates/adapters/daemon-gateway" }
daemon-http = { version = "0", path = "crates/adapters/daemon-http" }
daemon-mcp-client = { version = "0", path = "crates/adapters/daemon-mcp-client" }
daemon-delivery = { version = "0", path = "crates/adapters/daemon-delivery" }
daemon-ingest = { version = "0", path = "crates/adapters/daemon-ingest" }
daemon-matrix = { version = "0", path = "crates/adapters/daemon-matrix" }
daemon-oauth = { version = "0", path = "crates/adapters/daemon-oauth" }
daemon-rooms = { version = "0", path = "crates/adapters/daemon-rooms" }
# [waveB:msg-adapters] Six additional chat-transport adapters (Phase 2 integration). Each isolates
# its heavy external SDK deps; the daemon binary only references its `Adapter`/`AuthFlowFactory`/`Config`.
daemon-telegram = { version = "0", path = "crates/adapters/daemon-telegram" }
daemon-whatsapp = { version = "0", path = "crates/adapters/daemon-whatsapp" }
daemon-discord = { version = "0", path = "crates/adapters/daemon-discord" }
daemon-wechat = { version = "0", path = "crates/adapters/daemon-wechat" }
daemon-line = { version = "0", path = "crates/adapters/daemon-line" }
daemon-slack = { version = "0", path = "crates/adapters/daemon-slack" }
daemon-transport = { version = "0", path = "crates/substrate/daemon-transport" }
daemon-orchestration = { version = "0", path = "crates/orchestration/daemon-orchestration" }
daemon-node = { version = "0", path = "crates/node/daemon-node" }
# default-features = false here so workspace consumers (the client + tool) inherit the light
# (no-hyperon) build; the worker build opts into the engine via `--features hyperon` on the crate.
daemon-metta = { version = "0", path = "crates/coprocessor/daemon-metta", default-features = false }
daemon-metta-client = { version = "0", path = "crates/coprocessor/daemon-metta-client" }
daemon-pytool = { version = "0", path = "crates/coprocessor/daemon-pytool" }
daemon-pytool-client = { version = "0", path = "crates/coprocessor/daemon-pytool-client" }
daemon-tool-metta = { version = "0", path = "tools/daemon-tool-metta" }
daemon-tool-shell = { version = "0", path = "tools/daemon-tool-shell" }
daemon-tool-process = { version = "0", path = "tools/daemon-tool-process" }
daemon-tool-fs = { version = "0", path = "tools/daemon-tool-fs" }
daemon-tool-tkx = { version = "0", path = "tools/daemon-tool-tkx" }
daemon-tool-orchestrate = { version = "0", path = "tools/daemon-tool-orchestrate" }
daemon-tool-cron = { version = "0", path = "tools/daemon-tool-cron" }
daemon-tool-web = { version = "0", path = "tools/daemon-tool-web" }
daemon-tool-vision = { version = "0", path = "tools/daemon-tool-vision" }
daemon-tool-browser = { version = "0", path = "tools/daemon-tool-browser" }
daemon-tool-todo = { version = "0", path = "tools/daemon-tool-todo" }
daemon-tool-clarify = { version = "0", path = "tools/daemon-tool-clarify" }
daemon-tool-execute-code = { version = "0", path = "tools/daemon-tool-execute-code" }
daemon-tool-session-search = { version = "0", path = "tools/daemon-tool-session-search" }
daemon-tool-semantic-search = { version = "0", path = "tools/daemon-tool-semantic-search" }
daemon-skills = { version = "0", path = "crates/skills/daemon-skills" }
daemon-tool-skill = { version = "0", path = "tools/daemon-tool-skill" }
daemon-tool-profile = { version = "0", path = "tools/daemon-tool-profile" }

# Size-tuned release profile (the flake's crane buildPackage builds --release, so Nix outputs
# inherit this). Measured on the full workspace: together these take the `daemon` binary
# 124 MiB -> 57 MiB (-54%) and `daemon-cli` 6.4 MiB -> 3.3 MiB (-49%).
[profile.release]
panic = "unwind"   # REQUIRED: catch_unwind supervision is void under abort (see docs/research/beam-substrate-reference-extraction.md §2.2)
strip = "symbols"  # -21% alone: drop .symtab/.strtab; unwinding (.eh_frame) is kept, only backtrace symbol names go
lto = "thin"       # cross-crate DCE+inlining; -3% size on top of opt-s/cgu1 (-17% on daemon-cli) at ~no wall cost
opt-level = "s"    # -31% vs opt 3 at same settings; hot compute (ggml, aws-lc-rs, SQLite) is C/asm built at its own -O3, the Rust side is control plane + CBOR framing
codegen-units = 1  # -17% more (better DCE/less duplication); full rebuild 5m08 -> 6m09 on 32 cores, and thin-LTO link stays parallel

[profile.dev]
panic = "unwind"
